[package]
name = "pitagoecsvgen_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
itertools = "0.10.5"
lindera = { version = "0.12.6", features=["ipadic", "compress"] }
regex = "1.7.0"
serde = { version = "1.0.147", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
unicode-normalization = "0.1.22"
wasm-bindgen = "0.2.83"
